# FAIRRcheck

./: .gitignore  README.md  TECHNICAL.md  main.py  pyproject.toml
config/: metrics_fairr_v1.yml
examples/fairrish_project/: LICENSE  main.py
examples/fairrish_project/config/: params.yml
examples/fairrish_project/fairrcheck_out/: report.html  report.json  report_llm.json
examples/fairrrish_project/: CITATION.cff  README.md  SHA256SUMS  requirements.txt
examples/fairrrish_project/fairrcheck_out/: report.html  report.json  report_llm.html  report_llm.json
examples/semifairr_project/: README.md  main.py  plot.py  pyproject.toml
examples/semifairr_project/config/: params.yml
examples/semifairr_project/fairrcheck_out/: advice.json  patches.json  report.html  report.json  report_llm.html  report_llm.json
examples/unfair_project/: notes.txt
examples/unfair_project/fairrcheck_out/: report.html  report.json
examples/unfairr_project/fairrcheck_out/: advice.json  patches.json  report.html  report.json  report_llm.html  report_llm.json
fairrcheck/: __init__.py  agent.py  cli.py  detectors.py  llm.py  registry.py  scanner.py  scoring.py
fairrcheck/reporters/: __init__.py  html_reporter.py  json_reporter.py  pdf_reporter.py
fairrcheck/templates/: report.html.j2
